--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.14.3",
-    "@strapi/plugin-users-permissions": "4.14.3",
     "@strapi/plugin-i18n": "4.14.3",
-    "better-sqlite3": "8.6.0"
+    "@strapi/plugin-users-permissions": "4.14.3",
+    "@strapi/strapi": "4.14.3",
+    "better-sqlite3": "8.6.0",
+    "pg": "^8.11.3"
   },
   "author": {
     "name": "A Strapi developer"
